; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_specifier.c_specifier_tmp_dir.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_specifier.c_specifier_tmp_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @specifier_tmp_dir(i8 signext %0, i8* %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i8 %0, i8* %6, align 1
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  %13 = call i32 @tmp_dir(i8** %10)
  store i32 %13, i32* %12, align 4
  %14 = load i32, i32* %12, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %12, align 4
  store i32 %17, i32* %5, align 4
  br label %29

18:                                               ; preds = %4
  %19 = load i8*, i8** %10, align 8
  %20 = call i8* @strdup(i8* %19)
  store i8* %20, i8** %11, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %18
  %24 = load i32, i32* @ENOMEM, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %5, align 4
  br label %29

26:                                               ; preds = %18
  %27 = load i8*, i8** %11, align 8
  %28 = load i8**, i8*** %9, align 8
  store i8* %27, i8** %28, align 8
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %26, %23, %16
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @tmp_dir(i8**) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
